--- a/license_terms.css
+++ b/license_terms.css
@@ -1,12 +1,19 @@
 #license_terms {
     width: 100%;
-    height: calc(100vh - 10em);
+    height: calc(100vh - 11em);
 
     overflow-y: auto;
 }
 
-#action_buttons {
-    margin-top: 2em;
+.action-button {
+    width: 12em;
+}
+
+.button {
+    margin: 0 0 0 .5em;
+    font-size: .8em;
+    line-height: 1em;
+    padding: .6em 1em
 }
 
 #ok {
