--- a/check_for_updates.css
+++ b/check_for_updates.css
@@ -1,12 +1,6 @@
-.action-button {
-    width: 10em;
-}
-
 .button {
     margin: 0 0 0 .5em;
-    font-size: .8em;
-    line-height: 1em;
-    padding: .6em 1em
+    font-size: medium;
 }
 
 #action_buttons {
@@ -15,10 +9,6 @@
 
 #close {
     margin-left: 3em;
-}
-
-* {
-    -webkit-user-select:none;
 }
 
 #current_version,
