--- a/variable.css
+++ b/variable.css
@@ -24,7 +24,5 @@ table {
 
 .button {
     margin: 0 0 0 .5em;
-    font-size: .8em;
-    line-height: 1em;
-    padding: .6em 1em;
+    font-size: medium;
 }
