--- a/prompt.css
+++ b/prompt.css
@@ -18,7 +18,8 @@
 
 .button {
     margin: 0 0 0 .5em;
-    font-size: .8em;
     line-height: 1em;
-    padding: .6em 1em;
+
+    height: 1.5em;
+    font-size: medium;
 }
