--- a/index.css
+++ b/index.css
@@ -44,11 +44,11 @@ li>pre {
 }
 
 table. {
-    border: 0px;
+    border: 0;
 }
 
 td, th {
-    padding: 0px;
+    padding: 0;
 }
 
 .table-column-1 {
